Added CToolBar::PressButton
Added CToolBar::SaveRestore
Added CToolBar::SetDisabledImageList
Added CToolBar::SetDrawTextFlags
Added CToolBar::SetExtendedStyle
Added CToolBar::SetHotImageList
Added CToolBar::SetHotItem
Added CToolBar::SetImageList
Added CToolBar::SetIndent
Added CToolBar::SetMaxTextRows
Added CToolBar::SetPadding
Added CToolBar::SetToolTips
Added CWinException::what
Added CWnd::GetActiveWindow
Added CWnd::GetCapture
Added CWnd::GetFocus
Added CWnd::GetFont
Added CWnd::GetIcon
Added CWnd::GetLastActivePopup
Added CWnd::GetTopWindow
Added CWnd::GetWindowTextLength
Added CWnd::OpenIcon
Added CWnd::SetFont
Added CWnd::SetIcon
Added CWnd::SetWindowTheme
Added CWnd::ShowOwnedPopups
Added CWnd::ShowWindowAsync
Added CWnd::WindowFromDC
Added ::IsAeroThemed
Modified CPropertyPage::Apply			now returns int
Modified CPropertyPage::OnKillActive	now returns BOOL
Modified CPropertyPage::OnOK			now returns int
Modified CPropertyPage::OnSetActive		now returns int
Modified CPropertyPage::OnWizardBack 	now returns int
Modified CPropertyPage::OnFinish		now returns BOOL
Modified CPropertyPage::OnWizardBack 	now returns int
Modified CPropertyPage::OnWizardFinish	now returns BOOL
Modified CPropertyPage::OnWizardNext	now returns int
Modified CSocket::Bind          	now uses TCHAR instead of char
Modified CSocket::Connect       	now uses TCHAR instead of char
Modified CSocket::Receive       	now uses TCHAR instead of char
Modified CSocket::ReceiveFrom   	now uses TCHAR instead of char
Modified CSocket::Send          	now uses TCHAR instead of char
Modified CSocket::SentTo        	now uses TCHAR instead of char
Modified CWinException::what  		now outputs text to debugger
Modified CWnd::OnPaint              now takes a CDC& argument instead of HDC
Renamed CMenubar to CMenubar
Renamed CRebar to CReBar
Renamed CStatusbar to CStatusBar
Renamed CToolbar to CToolBar
Renamed RebarTheme to ReBarTheme
Renamed ToolbarTheme to ToolBarTheme