@@ -68,23 +68,23 @@ BOOL CSimpleMDIChild::OnCommand(WPARAM wParam, LPARAM lParam)
 	{
 	case IDM_COLOR_BLACK:
 		m_View.SetColor(RGB(0,0,0));
-		::InvalidateRect(m_hWnd, NULL, TRUE);
+		Invalidate();
 		return TRUE;
 	case IDM_COLOR_RED:
 		m_View.SetColor(RGB(255, 0, 0));
-		::InvalidateRect(m_hWnd, NULL, TRUE);
+		Invalidate();
 		return TRUE;
 	case IDM_COLOR_GREEN:
 		m_View.SetColor(RGB(0, 255, 0));
-		::InvalidateRect(m_hWnd, NULL, TRUE);
+		Invalidate();
 		return TRUE;
 	case IDM_COLOR_BLUE:
 		m_View.SetColor(RGB(0, 0, 255));
-		::InvalidateRect(m_hWnd, NULL, TRUE);
+		Invalidate();
 		return TRUE;
 	case IDM_COLOR_WHITE:
 		m_View.SetColor(RGB(255, 255, 255));
-		::InvalidateRect(m_hWnd, NULL, TRUE);
+		Invalidate();
 		return TRUE;
 	}
 
