@@ -176,7 +176,7 @@ void CView::StorePoint(int x, int y, bool PenDown)
 void CView::OnLButtonDown(LPARAM lParam)
 {
  	// Capture mouse input.
- 	::SetCapture(m_hWnd);
+ 	SetCapture();
 
 	StorePoint(GET_X_LPARAM(lParam), GET_Y_LPARAM(lParam), true);
 }
@@ -185,7 +185,7 @@ void CView::OnLButtonUp(LPARAM lParam)
 {
 	{
 		//Release the capture on the mouse
-		::ReleaseCapture();
+		ReleaseCapture();
 
 		StorePoint(GET_X_LPARAM(lParam), GET_Y_LPARAM(lParam), false);
 	}
